Changes in version 1.1.3
------------------------

* Merged in Jeff Weiss' patch to allow custom stylesheets to be loaded from the
  classpath (GitHub issue #10).

* Fix for TestNG version dependency in Maven POM (GitHub issue #12).


Changes in version 1.1.2
------------------------

* Fix for NullPointerException when directory does not exist.

* Patch for test instance names in TestNG 5.13.1.


Changes in version 1.1.1
------------------------

* Fix for NullPointerException when method thread ID is null (ISSUE#47).

* Fix for IllegalStateException generating chronology when @AfterXXX methods
  are being used.

* Disabled generation of chronology due to inaccuracies in output.  Probably
  due to TestNG issues #85 and #86.


Changes in version 1.1
----------------------

* Template refactoring and fixing of Velocity warnings/errors.

* i18n

* Added chronology page for listing tests in order of execution.

* Don't use System ClassLoader for loading templates.  Fixes problem using
  ReportNG with Gradle (see http://jira.codehaus.org/browse/GRADLE-836).