@@ -6,6 +6,9 @@ Changes in version 1.1.3
 
 * Fix for TestNG version dependency in Maven POM (GitHub issue #12).
 
+* Don't generate a Velocity log file unless explicitly requested by setting a
+  system property (GitHub issue #13).
+
 
 Changes in version 1.1.2
 ------------------------
